--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Future Emerging Technologies</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="https://script.adquake.com/js/adquake.js" adquake-key="768jKzZQRUS9HPf6cour4Q=="></script>
     <meta name="google-adsense-account" content="ca-pub-4791290473667459">
     <style>
         body {
